--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <meta property="og:title" content="Play77 : Agen Slot Online Terbaik Dan Terpercaya">
 <meta property="og:type" content="product">
 <link rel="shortcut icon" href="https://pastiwdpro.shop/gambar/icon2.png" sizes="16x16">
-<link rel="amphtml" href="https://webgacor.menangharian.shop/pushweb/play77.html">
+<link rel="amphtml" href="https://sigacor.menangharian.shop/pushweb/play77.html">
 <meta property="og:description" content="Play77 adalah situs judi online terbaik dan terpercaya yang selalu memberikan pelayanan terbaik dan tercepat dan juga menyediakan bonus-bonus menarik yang bisa di nikmati oleh para player ketika sedang bermain.">
 <meta property="og:image" content="assets/banner.jpg">
 <meta property="og:image:secure_url" content="assets/banner.jpg">
