--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ Play77 : Agen Slot Online Terbaik Dan Terpercaya
 </a>
 </div>
 <div class="product__description rte quick-add-hidden">
-<p><a href="https://shortwd.tech/gens1" title="Play77">
+<p><a href="https://gomentari138.com/account/register/142105213">
 <img src="assets/daftar.webp"></a></p>
 <p>Play77 adalah situs judi online terbaik dan terpercaya yang selalu memberikan pelayanan terbaik dan tercepat dan juga menyediakan bonus-bonus menarik yang bisa di nikmati oleh para player ketika sedang bermain.</p>
 </div>
